bugfix: fixed logo alignment for threadhelper extenstion

--- a/source/components/Container/styles.scss
+++ b/source/components/Container/styles.scss
@@ -32,7 +32,7 @@
   width: 40px;
   right: 0 !important;
   display: flex;
-  position: inherit;
+  position: inherit !important;
   margin-left: 32px;
 
   span {
